# LiuClaw

./: .gitignore  README.md  pyproject.toml
agent_core/: __init__.py  agent-core模块.md  agent.py  agent_loop.py  types.py
ai/: __init__.py  ai模块.md  client.py  errors.py  models.py  options.py  reasoning.py  registry.py  session.py  types.py
ai/converters/: __init__.py  messages.py  tools.py
ai/providers/: __init__.py  anthropic.py  base.py  openai.py  zhipu.py
ai/utils/: __init__.py  context_window.py  schema_validation.py  streaming.py  unicode.py
coding_agent/: __init__.py  coding-agent模块.md  main.py
coding_agent/cli/: __init__.py  parser.py
coding_agent/config/: paths.py
coding_agent/core/: __init__.py  agent_session.py  agents_context_loader.py  extensions_runtime.py  model_registry.py  prompts_loader.py  resource_loader.py  runtime_assembly.py  session_manager.py  settings_manager.py  skills_loader.py  system_prompt.py  system_prompt_builder.py  themes_loader.py  types.py
coding_agent/core/compaction/: __init__.py  branch_summary.py  compactor.py  coordinator.py  triggers.py
coding_agent/core/tools/: __init__.py  bash.py  common.py  (+8 more)
examples/: anthropic_simple.py  openai_simple.py
mom/: __init__.py  context_sync.py  events.py  feishu.py  main.py  mom模块.md  prompt.py  runner.py  store.py  types.py
tests/: test_agent.py  test_agent_loop.py  test_client.py  test_coding_agent.py  test_converters.py  test_models.py  test_mom.py  test_protocol.py  test_provider_clients.py  test_reasoning.py  test_registry.py  test_utils.py  test_zhipu_provider.py
(+5 files in other folders)
