[project]
name = "ai"
version = "0.1.0"
description = "Unified async LLM adapter layer for OpenAI and Anthropic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.109.0",
  "anthropic>=0.54.0",
  "httpx>=0.27.0",
  "prompt_toolkit>=3.0.47",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "agent_core", "coding_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
